# qmat_cli

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CLI_IMPLEMENTATION_SUMMARY.md  CMakeCache.txt  CMakeLists.txt  CMakeLists_backup.txt  CMakePresets.json  GLWidget.cpp  GLWidget.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  PrimMesh.h  Result.txt  SlabMesh.cpp  SlabMesh.h  ThreeDimensionalShape.cpp  ThreeDimensionalShape.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  camera.cpp  camera.h  cgal_mesh_cpp_problem_fixing_cpp  cmake_install.cmake  config.ini  main.cpp  main_cli.cpp  medial_axis.qrc  medial_axis.ui  medialaxissimplification3d.cpp  medialaxissimplification3d.h  pointcloud.vcxproj.vspscc  property.props  qmat.vcxproj  qmat.vcxproj.filters  qmat_cli.sln  (+4 more)
ColorRamp/: ColorRamp.cpp  ColorRamp.h
NonManifoldMesh/: nonmanifoldmesh.cpp  nonmanifoldmesh.h
PsRender/: PsRender.cpp  PsRender.h
